--- a/Views/RestaurantConsume/Index.cshtml
+++ b/Views/RestaurantConsume/Index.cshtml
@@ -34,7 +34,7 @@
     <h1>Welcome to the Restaurant Management System</h1>
     <div class="button-container">
         <a href="@Url.Action("GenerateBill", "RestaurantConsume")" class="btn">Generate Bill</a>
-        <a href="@Url.Action("ShowFoodItems", "RestaurantConsume")" class="btn">Show Food Items</a>
+        <a href="@Url.Action("showFoodItem", "RestaurantConsume")" class="btn">Show Food Items</a>
         <a href="@Url.Action("AddTable", "RestaurantConsume")" class="btn">Add Table</a>
         <a href="@Url.Action("ShowTable", "RestaurantConsume")" class="btn">Show Table</a>
         <a href="@Url.Action("AddFoodItem", "RestaurantConsume")" class="btn">Add Food Item</a>
