--- a/Views/RestaurantConsume/Index.cshtml
+++ b/Views/RestaurantConsume/Index.cshtml
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to the Restaurant Management System</h1>
+   @*  <h1>Welcome to the Restaurant Management System</h1> *@
     <div class="button-container">
         <a href="@Url.Action("GenerateBill", "RestaurantConsume")" class="btn">Generate Bill</a>
         <a href="@Url.Action("showFoodItem", "RestaurantConsume")" class="btn">Show Food Items</a>
