--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RestaurantConsumeWebAPI.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <style>
         .container-fluid {
             display: flex;
@@ -43,23 +44,15 @@
     </style>
 </head>
 <body>
+    @Html.Partial("_HeaderPartial")
     <div class="container-fluid">
-        <nav class="sidebar">
-            @* <a class="navbar-brand" asp-area="" asp-controller="RestaurantConsume" asp-action="ShowTable">RestaurantConsumeWebAPI</a> *@
-            <a class="nav-link" asp-area="" asp-controller="RestaurantConsume" asp-action="Index">Home</a>
-        </nav>
         <div class="content">
             <main role="main" class="pb-3">
                 @RenderBody()
             </main>
         </div>
     </div>
-
-   @*  <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - RestaurantConsumeWebAPI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer> *@
+        @Html.Partial("_FooterPartial")
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
